--- a/vignettes/edit_catmaid.Rmd
+++ b/vignettes/edit_catmaid.Rmd
@@ -170,7 +170,7 @@ fafbseg_join_connectors_in_ngl_volumes("annotation:ASB Test v14-seg Upload",
 ```
 
 If you want to, you can then transfer names and annotations back in `v14-seg` so you cvan easily identify these neurons when you go back to tracing in that environment
-```{r transfer.names}
+```{r transfer.names, eval=FALSE}
 catmaid_interactive_name_transfer("annotation:ASB Test v14-seg Upload", conn = fafb_seg_conn(), conn2 = NULL)
 ```
 
