--- a/vignettes/edit_catmaid.Rmd
+++ b/vignettes/edit_catmaid.Rmd
@@ -165,8 +165,9 @@ Now that you have uploaded your neuron, you might want to automatically conenct 
 
 ```{r auto.attach.connectors, eval=F, echo=T}
 # WTPN2017_AL_PN refers to all olfactory projection neurons from the antennal lobe
-fafbseg_join_connectors_in_ngl_volumes("annotation:ASB Test v14-seg Upload",
+joins = fafbseg_join_connectors_in_ngl_volumes("annotation:ASB Test v14-seg Upload",
                                        putatively.connected.skids="annotation:WTPN2017_AL_PN")
+print(joins)
 ```
 
 If you want to, you can then transfer names and annotations back in `v14-seg` so you cvan easily identify these neurons when you go back to tracing in that environment
