--- a/vignettes/edit_catmaid.Rmd
+++ b/vignettes/edit_catmaid.Rmd
@@ -169,7 +169,7 @@ Now that you have uploaded your neuron, you might want to automatically connect 
 ```{r auto.attach.connectors, eval=F, echo=T}
 # WTPN2017_AL_PN refers to all olfactory projection neurons from the antennal lobe
 joins = fafbseg_join_connectors_in_ngl_volumes("annotation:ASB Test v14-seg Upload",
-                                       putatively.connected.skids="annotation:WTPN2017_AL_PN")
+                                       maybe.connected="annotation:WTPN2017_AL_PN")
 print(joins)
 ```
 
